Layout on small display sizes fixed.

--- a/web/gui/main.css
+++ b/web/gui/main.css
@@ -520,7 +520,7 @@ body.modal-open {
     font-size: 18px;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 300px;
+    max-width: 220px;
  }
 
  #hostnametext {
@@ -528,7 +528,7 @@ body.modal-open {
     float: left;
     text-overflow: ellipsis;
     overflow: hidden;
-    max-width: 90%;
+    max-width: 160px;
 }
 
 .sign-in-btn {
@@ -582,13 +582,14 @@ body.modal-open {
     color:#FFCC00;    
 }
 
+ 
 @media (min-width: 1400px) {
     #hostname {
-        max-width: 300px !important;
+        max-width: 600px !important;
     }
 
     #hostnametext {
-        max-width: 90% !important;
+        max-width: 540px !important;
     }
 }
 
@@ -596,6 +597,14 @@ body.modal-open {
     .container {
         padding-left: 3% !important;
     }
+
+    #hostname {
+        max-width: 280px !important;
+     }
+ 
+     #hostnametext {
+        max-width: 220px !important;
+     }
     
     .charts-body {
         width: calc(100% - 263px) !important;
@@ -617,24 +626,23 @@ body.modal-open {
 }
 
 @media (min-width: 1200px) {
+    #hostname {
+        max-width: 100px;
+    }
+ 
+    #hostnametext {
+        max-width: 40px;
+    }
     .container {
         padding-left: 2% !important;
     }
-    #hostname {
-        max-width: 100px;
-     }
- 
-     #hostnametext {
-         max-width: 0px;
-     }
+
 
     .charts-body {
         width: calc(100% - 233px) !important;
         padding-left: 1% !important;
         padding-right: 1% !important;
     }
-
-
 
     .sidebar-body {
         display: inline-block !important;
@@ -692,15 +700,7 @@ body.modal-open {
     }
 }
 
-@media (max-width: 860px) {
-    #hostname {
-       max-width: 100px;
-    }
-
-    #hostnametext {
-        max-width: 0px;
-    }
-
+@media (min-width: 860px) {
     .dashboard-sidebar {
         padding-left: 20px;
     }
@@ -708,7 +708,6 @@ body.modal-open {
 }
 
 @media (min-width: 768px) {
-
     .dashboard-sidebar {
         padding-left: 20px;
     }
